WeddingWebsite/Components/Pages/Auth/Login.razor.css
.login-modal {
    max-width: 300px;
    margin: auto;
}

.container {
    width: 100vw;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.background-image {
    width: 100vw;
    height: 100vh;
    object-fit: cover;
    position: absolute;
    top: 0;
    z-index: -1;
}

h1 {
    margin-bottom: 15px;
}

label, p {
    margin-bottom: 8px;
}

button {
    padding: 5px 10px;
    border-radius: 5px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075), 0 1px 2px rgba(0, 0, 0, 0.075);
    transition-property: box-shadow;
    transition-duration: 0.3s;
    margin-bottom: 15px;
}

button:hover {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

